agrego estilos a header y elimino estilos en carpeta css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Explora los majestuosos paisajes de los Andes Colombianos en nuestro sitio web especializado. Descubre las maravillas naturales, las culturas ancestrales y las experiencias únicas que esta región tiene para ofrecer."/>
+    <meta name="keywords" content="Paisajes Andes Colombianos, maravillas naturales, culturas ancestrales, experiencias únicas">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    
+    <!-- Etiquetas Open Graph -->
+    <meta property="og:title" content="Título de tu página">
+    <meta property="og:description" content="Descripción de tu página para redes sociales">
+    <meta property="og:image" content="URL de la imagen a mostrar cuando se comparta el enlace">
+    <meta property="og:url" content="URL completa de tu página">
+    <meta property="og:type" content="website">
+
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -110,6 +119,7 @@
             </section>
         </div>
     </main>
+    
     <!--Flexbox-->
     <footer>
         <div class="footer-content">
