--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
     <meta property="og:type" content="website">
 
     <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
@@ -30,7 +27,7 @@
     <!--bootstrap + Flexbox -->
     <header class="container-fluid">
       <div class="row h-100">
-        <nav class="navbar navbar-expand-lg navbar-light p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle">
+        <nav class="navbar navbar-expand-lg navbar-light p-3 text-primary-emphasis bg-danger bg border border-primary-subtle">
           <a class="navbar-brand" href="#">
             <img src="./assets/image/Logo.png" alt="Logo" style="width: 80px; height: auto;">
           </a>
