agrego responsive y cambio estilos de sass

--- a/pages/about.html
+++ b/pages/about.html
@@ -52,6 +52,9 @@
     <main>
         <section>
             <div class="container">
+                <div class="imageabsolut">
+                  <img src="../assets/image/Topographic 3.svg" alt="lo sentimos no carga la imagen">
+                </div>
                 <h1 class="blanco">Acerca de los Andes Colombianos</h1>
                 <p>Los Andes colombianos se extienden a lo largo del territorio de Colombia, desde el suroccidente hasta el norte del país. Esta imponente cadena montañosa abarca una diversidad de paisajes y altitudes que van desde valles fértiles hasta picos nevados.
 
@@ -64,6 +67,31 @@
                     Explorar los Andes colombianos te permitirá sumergirte en la majestuosidad de la naturaleza, disfrutar de panoramas impresionantes, realizar caminatas por senderos escarpados y experimentar la autenticidad de las culturas locales. Estos paisajes montañosos te invitan a descubrir la belleza y la grandeza de la naturaleza en su máxima expresión.</p>
             </div>
         </section>
+        <Section>
+          <div class="swiper-container">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide" style="background-image: url('./assets/image/66e83adb-2c0d-4368-956b-dfaca0a8c363.jpeg');"></div>
+              <div class="swiper-slide" style="background-image: url('./assets/image/66e83adb-2c0d-4368-956b-dfaca0a8c363.jpeg');"></div>
+              <div class="swiper-slide" style="background-image: url('./assets/image/66e83adb-2c0d-4368-956b-dfaca0a8c363.jpeg');"></div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+          <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+          <script>
+            document.addEventListener('DOMContentLoaded', function () {
+              new Swiper('.swiper-container', {
+                loop: true,
+                pagination: {
+                  el: '.swiper-pagination',
+                  clickable: true,
+                },
+                autoplay: {
+                  delay: 3000,
+                },
+              });
+            });
+          </script>
+        </Section>
     </main>
 
 
