--- a/pages/services.html
+++ b/pages/services.html
@@ -52,6 +52,9 @@
     <!--Flexbox-->
     <main>
         <section>
+            <div class="imageabsolut">
+              <img src="../assets/image/Topographic 3.svg" alt="lo sentimos no carga la imagen">
+            </div>
             <div class="container">
                 <h2 class="blanco">Nuestros Servicios</h2>
                 <p>Ofrecemos una amplia gama de servicios diseñados para satisfacer tus necesidades:</p>
