agrego estilos y arreglo errores

--- a/index.html
+++ b/index.html
@@ -61,18 +61,17 @@
     <main class="container-fluid">
         <div class="row h-100">
             <section class="col-xxl-12 col-xl-12 col-lg-12 col-md-12 col-sm-12 textheight">
+              <div>
+                <div class="imageabsolut">
+                  <img src="./assets/image/Topographic 6.svg" alt="lo sentimos no carga la imagen">
+                </div>
                 <h1 class="textheight">Naturaleza Exuberante de los Andes Colombianos
                   <img class="imagesmall" src="./assets/image/NIEVE Montaña Nevada Farellones 01 - skifarellones.png" alt="Montañas cubiertas de nieve">
                   Majestuosos picos nevados te esperan para una aventura única<img class="imagesmall" src="./assets/image/66e83adb-2c0d-4368-956b-dfaca0a8c363.jpeg" alt="Pájaro exótico volando"> Observa la rica fauna de colores brillantes en el cielo
                   <img class="imagesmall" src="./assets/image/9 Things to Know Before You Go to the Amazon Rainforest.jpeg" alt="Cascada impresionante">
                 </h1>
+              </div>
                 <!--contenido de mi pagina-->
-                <div class="container">
-                    <h2 class="blanco" >Explorando los Tesoros Escondidos: Descubre la Flora, Fauna y Paisajes de los Andes Colombianos</h2>
-                    <div class="imageabsolut">
-                      <img src="./assets/image/Topographic 6.svg" alt="lo sentimos no carga la imagen">
-                    </div>
-                </div>
             </section>
             <section class="col-xxl-6 col-xl-6 col-lg-6 col-md-6 col-sm-12 bg-success-subtle">
                 <div class="container">
