--- a/pages/contact.html
+++ b/pages/contact.html
@@ -55,10 +55,11 @@
     <main class="main-contact">
         <div class="grid">
             <div class="item">
-                <h1 class="negro">formulario de contacto</h1>
+              <div>
                 <p class="negro">Embárcate en una inolvidable aventura en los majestuosos Andes colombianos, donde la naturaleza deslumbrante te espera. Nuestro formulario de contacto está diseñado para ayudarte a personalizar tu experiencia y aprovechar ofertas exclusivas. Descubre senderos cautivadores que te llevarán a lugares impresionantes, maravíllate con cascadas en cascada y déjate cautivar por vistas panorámicas que te dejarán sin aliento.</p>
                 <p class="negro">Sumérgete en los secretos mejor guardados de los Andes colombianos y déjate envolver por la magia de este destino único. Nuestro equipo está preparado para guiarte en cada paso del camino, asegurando que cada momento sea memorable. No dejes pasar la oportunidad de explorar este tesoro natural.</p>
                 <p class="negro">Llena nuestro formulario de contacto y da el primer paso hacia una aventura incomparable en los Andes colombianos. Estamos emocionados de ser parte de tu viaje y de ayudarte a crear recuerdos que perdurarán para siempre. ¡No esperes más y déjate cautivar por la belleza y la serenidad de los Andes colombianos!</p>
+              </div>
             </div> 
             <div class="item">
               <form id="contactForm" action="">
