--- a/pages/about.html
+++ b/pages/about.html
@@ -51,7 +51,7 @@
 
     <main>
         <section>
-            <div class="container">
+            <div class="container2">
                 <div class="imageabsolut">
                   <img src="../assets/image/Topographic 3.svg" alt="lo sentimos no carga la imagen">
                 </div>
