edito etiquetas open graph

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
     <!-- Etiquetas Open Graph -->
-    <meta property="og:title" content="Título de tu página">
-    <meta property="og:description" content="Descripción de tu página para redes sociales">
+    <meta property="og:title" content="Descubre sobre los andes">
+    <meta property="og:description" content="Explora los majestuosos paisajes de los Andes Colombianos en nuestro sitio web especializado.">
     <meta property="og:image" content="URL de la imagen a mostrar cuando se comparta el enlace">
     <meta property="og:url" content="URL completa de tu página">
     <meta property="og:type" content="website">
