--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Etiquetas Open Graph -->
     <meta property="og:title" content="Descubre sobre los andes">
     <meta property="og:description" content="Explora los majestuosos paisajes de los Andes Colombianos en nuestro sitio web especializado.">
-    <meta property="og:image" content="URL de la imagen a mostrar cuando se comparta el enlace">
+    <meta property="og:image" content="https://i.pinimg.com/564x/95/4a/73/954a73cdad6393cf0e55941a2f6d1f11.jpg">
     <meta property="og:url" content="URL completa de tu página">
     <meta property="og:type" content="website">
 
