--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
     <!-- Etiquetas Open Graph -->
+    <link rel="icon" href="./assets/image/favicon-32x32.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/image/apple-icon-180x180.png">
     <meta property="og:title" content="Descubre sobre los andes">
     <meta property="og:description" content="Explora los majestuosos paisajes de los Andes Colombianos en nuestro sitio web especializado.">
     <meta property="og:image" content="https://i.pinimg.com/564x/95/4a/73/954a73cdad6393cf0e55941a2f6d1f11.jpg">
