codigo mas modular y reutilizable

--- a/pages/about.html
+++ b/pages/about.html
@@ -51,7 +51,7 @@
 
     <main>
         <section>
-            <div class="container2">
+            <div class="container">
                 <div class="imageabsolut">
                   <img src="../assets/image/Topographic 3.svg" alt="lo sentimos no carga la imagen">
                 </div>
@@ -66,32 +66,10 @@
                     
                     Explorar los Andes colombianos te permitirá sumergirte en la majestuosidad de la naturaleza, disfrutar de panoramas impresionantes, realizar caminatas por senderos escarpados y experimentar la autenticidad de las culturas locales. Estos paisajes montañosos te invitan a descubrir la belleza y la grandeza de la naturaleza en su máxima expresión.</p>
             </div>
+            <div class="container">
+              <iframe src="https://www.youtube.com/embed/_pT33Y8UkUw" frameborder="0" allowfullscreen></iframe>
+            </div>   
         </section>
-        <Section>
-          <div class="swiper-container">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide" style="background-image: url('./assets/image/66e83adb-2c0d-4368-956b-dfaca0a8c363.jpeg');"></div>
-              <div class="swiper-slide" style="background-image: url('./assets/image/66e83adb-2c0d-4368-956b-dfaca0a8c363.jpeg');"></div>
-              <div class="swiper-slide" style="background-image: url('./assets/image/66e83adb-2c0d-4368-956b-dfaca0a8c363.jpeg');"></div>
-            </div>
-            <div class="swiper-pagination"></div>
-          </div>
-          <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-          <script>
-            document.addEventListener('DOMContentLoaded', function () {
-              new Swiper('.swiper-container', {
-                loop: true,
-                pagination: {
-                  el: '.swiper-pagination',
-                  clickable: true,
-                },
-                autoplay: {
-                  delay: 3000,
-                },
-              });
-            });
-          </script>
-        </Section>
     </main>
 
 
