agrego metadescriptions y finalizo detalles

--- a/pages/about.html
+++ b/pages/about.html
@@ -6,7 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <!--scss-css-->
+<!-- Etiquetas Open Graph -->
+<link rel="icon" href="../assets/image/favicon-32x32.png" type="image/png">
+<link rel="apple-touch-icon" sizes="180x180" href="../assets/image/apple-icon-180x180.png">
+<meta property="og:title" content="Acerca de los Andes Colombianos">
+<meta property="og:description" content="Descubre la majestuosidad de los Andes colombianos, una cadena montañosa diversa y sorprendente. Desde valles fértiles hasta picos nevados, este paraíso natural alberga biodiversidad única y culturas ancestrales. Sumérgete en la grandeza de la naturaleza y la autenticidad de las comunidades locales en los Andes colombianos.">
+
+    <!--styles-->
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
