--- a/pages/contact.html
+++ b/pages/contact.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="../css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css">
+    
+    <!-- Etiquetas Open Graph -->
+    <link rel="icon" href="../assets/image/favicon-32x32.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/image/apple-icon-180x180.png">
+    <meta property="og:title" content="contactanos">
+    <meta property="og:description" content="Contacta con nosotros para obtener más información sobre los impresionantes paisajes de los Andes Colombianos. Estamos aquí para responder a tus preguntas y brindarte una experiencia inolvidable en esta maravillosa región.">
+    
     <!--styles-->
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
