--- a/pages/us.html
+++ b/pages/us.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--scss-css-->
+
+    <!-- Etiquetas Open Graph -->
+    <link rel="icon" href="../assets/image/favicon-32x32.png" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/image/apple-icon-180x180.png">
+    <meta property="og:title" content="Nosotros">
+    <meta property="og:description" content="Diversidad de especies y ecosistemas en los Andes Colombianos. Vegetación variada, fauna emblemática y especies endémicas. Comunidades locales clave para conservación y ecoturismo.">    
+
+    <!--styles-->
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
