agrego titulos en mis paginas

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta property="og:url" content="URL completa de tu página">
     <meta property="og:type" content="website">
 
-    <!--Bootstrap-->
-    <title>Document</title>
+    <!--styles-->
+    <title>home</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <style>
