--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,7 @@
 <meta property="og:description" content="Descubre la majestuosidad de los Andes colombianos, una cadena montañosa diversa y sorprendente. Desde valles fértiles hasta picos nevados, este paraíso natural alberga biodiversidad única y culturas ancestrales. Sumérgete en la grandeza de la naturaleza y la autenticidad de las comunidades locales en los Andes colombianos.">
 
     <!--styles-->
-    <title>Document</title>
+    <title>about us</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <style>
