--- a/pages/services.html
+++ b/pages/services.html
@@ -14,7 +14,7 @@
 
 
     <!--styles-->
-    <title>Document</title>
+    <title>services</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <style>
