--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,7 +15,7 @@
     <meta property="og:description" content="Contacta con nosotros para obtener más información sobre los impresionantes paisajes de los Andes Colombianos. Estamos aquí para responder a tus preguntas y brindarte una experiencia inolvidable en esta maravillosa región.">
     
     <!--styles-->
-    <title>Document</title>
+    <title>contact</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <style>
