--- a/pages/us.html
+++ b/pages/us.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Diversidad de especies y ecosistemas en los Andes Colombianos. Vegetación variada, fauna emblemática y especies endémicas. Comunidades locales clave para conservación y ecoturismo.">    
 
     <!--styles-->
-    <title>Document</title>
+    <title>us</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <style>
