agrego enlaces y creo estilos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <header class="container-fluid">
       <div class="row h-100">
         <nav class="navbar navbar-expand-lg navbar-light p-3 text-primary-emphasis bg-danger bg border border-primary-subtle">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="index.html">
             <img src="./assets/image/Logo.png" alt="Logo" style="width: 80px; height: auto;">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,12 +66,8 @@
               <div>
                 <div class="imageabsolut">
                   <img src="./assets/image/Topographic 6.svg" alt="lo sentimos no carga la imagen">
-                </div>
-                <h1 class="textheight">Naturaleza Exuberante de los Andes Colombianos
-                  <img class="imagesmall" src="./assets/image/NIEVE Montaña Nevada Farellones 01 - skifarellones.png" alt="Montañas cubiertas de nieve">
-                  Majestuosos picos nevados te esperan para una aventura única<img class="imagesmall" src="./assets/image/66e83adb-2c0d-4368-956b-dfaca0a8c363.jpeg" alt="Pájaro exótico volando"> Observa la rica fauna de colores brillantes en el cielo
-                  <img class="imagesmall" src="./assets/image/9 Things to Know Before You Go to the Amazon Rainforest.jpeg" alt="Cascada impresionante">
-                </h1>
+                </div class="container-center">
+                <h1 class="textheight">Explora los Andes Colombianos<img class="imagesmall" src="./assets/image/NIEVE Montaña Nevada Farellones 01 - skifarellones.png" alt="Montañas cubiertas de nieve">Aventura única<img class="imagesmall" src="./assets/image/66e83adb-2c0d-4368-956b-dfaca0a8c363.jpeg" alt="Pájaro exótico volando">Fauna brillante en el cielo<img class="imagesmall" src="./assets/image/9 Things to Know Before You Go to the Amazon Rainforest.jpeg" alt="Cascada impresionante"></h1>
               </div>
                 <!--contenido de mi pagina-->
             </section>
