--- a/pages/contact.html
+++ b/pages/contact.html
@@ -28,7 +28,7 @@
     <header class="container-fluid">
         <section class="row h-100">
             <nav class="navbar navbar-expand-lg navbar-light p-3 text-primary-emphasis bg-danger border border-primary-subtle">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="../index.html">
                   <img src="../assets/image/Logo.png" alt="logo" style="width: 80px; height: auto;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
