--- a/pages/services.html
+++ b/pages/services.html
@@ -70,22 +70,22 @@
                   <li>
                     <h3 class="blanco2">Servicio de Guía de Montaña</h3>
                     <p>Nuestros experimentados guías te acompañarán en emocionantes expediciones a través de los Andes colombianos. Te llevarán a lugares impresionantes, te proporcionarán información sobre la flora y fauna local y garantizarán tu seguridad durante la aventura.</p>
-                    <img src="../assets/image/guia de montaña.jpeg" alt="Servicio de Guía de Montaña">
+                    <img src="../assets/image/guia de montaña.jpeg" width="300" height="400" alt="Servicio de Guía de Montaña">
                   </li>
                   <li>
                     <h3 class="blanco2" >Senderismo y Trekking</h3>
                     <p>Explora los senderos escénicos de los Andes colombianos con nuestras rutas de senderismo y trekking. Desde caminatas suaves hasta desafiantes ascensos, tenemos opciones para todos los niveles de experiencia. Descubre la belleza natural y disfruta de vistas panorámicas inolvidables.</p>
-                    <img src="../assets/image/a3753da6a31b3aa4703308f6dc0d7284.jpg" alt="Senderismo y Trekking">
+                    <img src="../assets/image/a3753da6a31b3aa4703308f6dc0d7284.jpg" width="300" height="400" alt="Senderismo y Trekking">
                   </li>
                   <li>
                     <h3 class="blanco2" >Turismo Cultural</h3>
                     <p>Sumérgete en la rica cultura de los Andes colombianos a través de nuestros tours culturales. Visita pueblos tradicionales, conoce a las comunidades indígenas locales, participa en rituales y descubre la artesanía y la gastronomía auténtica de la región.</p>
-                    <img src="../assets/image/turismo cultural.jpeg" alt="Turismo Cultural">
+                    <img src="../assets/image/turismo cultural.jpeg" width="300" height="400" alt="Turismo Cultural">
                   </li>
                   <li>
                     <h3 class="blanco2" >Ecoturismo y Conservación</h3>
                     <p>Nos comprometemos con la conservación de los Andes colombianos. Únete a nuestros programas de ecoturismo y contribuye directamente a la protección de los ecosistemas locales. Participa en actividades de reforestación, avistamiento de aves y otras iniciativas sostenibles.</p>
-                    <img src="../assets/image/ecoturismo y conservacion.jpeg" alt="Ecoturismo y Conservación">
+                    <img src="../assets/image/ecoturismo y conservacion.jpeg" width="300" height="400" alt="Ecoturismo y Conservación">
                   </li>
                 </ul>
             </div>
