--- a/index.html
+++ b/index.html
@@ -8,56 +8,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     
     <!-- Etiquetas Open Graph -->
-    <link rel="icon" href="./assets/image/favicon-32x32.png" type="image/png">
-    <link rel="apple-touch-icon" sizes="180x180" href="./assets/image/apple-icon-180x180.png">
+    <link rel="icon" href="./assets/image/32x32.webp" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/image/apple-icon.webp">
     <meta property="og:title" content="Descubre sobre los andes">
     <meta property="og:description" content="Explora los majestuosos paisajes de los Andes Colombianos en nuestro sitio web especializado.">
     <meta property="og:image" content="https://i.pinimg.com/564x/95/4a/73/954a73cdad6393cf0e55941a2f6d1f11.jpg">
     <meta property="og:url" content="URL completa de tu página">
     <meta property="og:type" content="website">
 
-    <!--styles-->
+    <!--styles -->
     <title>home</title>
-    <link rel="stylesheet" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <style>
-        body{font-family: 'Poppins', sans-serif;}
-    </style>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
-    <!--bootstrap + Flexbox -->
-    <header class="container-fluid">
-      <div class="row h-100">
-        <nav class="navbar navbar-expand-lg navbar-light p-3 text-primary-emphasis bg-danger bg border border-primary-subtle">
-          <a class="navbar-brand" href="index.html">
-            <img src="./assets/image/Logo.png" alt="Logo" style="width: 80px; height: auto;">
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/about.html">Acerca de</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/contact.html">Contacto</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/services.html">Servicios</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./pages/us.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
+  <script>
+    const edad =  prompt('ingrese su edad')
+    const condition = parseInt (edad) > 13
+  
+    if (condition) {
+      alert('que disfrute la pelicula')
+    } else {
+    alert ('disculpas, no puede ingresar')
+    }
+  </script>
+   <header>
+    <nav class="navbar navbar-expand-lg navbar-light p-3 text-primary-emphasis bg-danger bg border border-primary-subtle">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">
+          <img src="./assets/image/Logo.webp" alt="Logo" style="width: 80px; height: auto;">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/about.html">Acerca de</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/contact.html">Contacto</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/services.html">Servicios</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/us.html">Contacto</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </header>
+    </nav>
+  </header>
     
 <!--Bootstrap + Flexbox + Grid  -->
     <main class="container-fluid">
@@ -88,11 +93,11 @@
                     <div class="row">
                       <div class="col-md-12">
                         <p class="textlimit">Bosques Nublados: Adéntrate en los misteriosos bosques nublados que se elevan entre las montañas. Estos bosques están envueltos en neblina y son el hogar de una variedad de plantas epífitas, musgos y orquídeas exóticas. Explora sus senderos empedrados mientras escuchas el eco de los cantos de aves coloridas y observas la danza de las mariposas.</p>
-                        <img src="./assets/image/Imagen neblinas.jpeg" alt="Bosque nublado"  width="300" height="200"  >
+                        <img src="./assets/image/neblinas.webp" alt="Bosque nublado"  width="300" height="200"  >
                       </div>
                       <div class="col-md-12">
                         <p class="textlimit">Ríos y Cascadas: Los Andes Colombianos están atravesados por numerosos ríos y arroyos que descienden por las montañas formando hermosas cascadas. Descubre la fuerza y la belleza del agua en cascadas como Salto del Tequendama y Chorrera de la Novia. Siéntete revitalizado mientras te sumerges en sus aguas cristalinas y disfrutas de la frescura de la naturaleza.</p>
-                        <img src="./assets/image/DALL·E 2023-06-08 14.50.04 - dame un imagen 4k de el Salto de tequendama.png" alt="rios y cascadas"  width="300" height="200"   >
+                        <img src="./assets/image/imagen de selva.webp" alt="rios y cascadas"  width="300" height="200"   >
                       </div>
                       <div class="col-md-12">
                         <p class="textlimit">Prepárate para una aventura inolvidable mientras exploras los tesoros escondidos de los Andes Colombianos. Estas tierras te invitan a conectarte con la naturaleza en su estado más puro y a descubrir la magia que se encuentra en cada rincón de esta región montañosa. ¡Emprende tu viaje y sé testigo de la grandeza de los Andes Colombianos!</p>
@@ -105,11 +110,11 @@
                     <div class="row">
                       <div class="col-md-12">
                         <p class="textlimit">Páramos: Los páramos son ecosistemas únicos y frágiles que se encuentran en las alturas de los Andes Colombianos. Aquí, serás testigo de la vasta extensión de frailejones, plantas adaptadas al frío y las bajas temperaturas. Observa las lagunas cristalinas que se forman en medio de estas tierras altas y escucha el susurro del viento entre los pastizales.</p>
-                        <img src="./assets/image/DALL·E 2023-06-08 14.54.56 -  lagunas cristalinas que se forman en medio de estas tierras altas los andes colombianos.png" alt="Paramos"  width="300" height="200"  >
+                        <img src="./assets/image/lagunas.webp" alt="Paramos"  width="300" height="200"  >
                       </div>
                       <div class="col-md-12">
                         <p class="textlimit">Vida Silvestre: En tu travesía por los Andes Colombianos, te encontrarás con una rica diversidad de vida silvestre. Podrás avistar especies emblemáticas como el cóndor de los Andes, el oso de anteojos, el tapir de montaña y una amplia variedad de aves y mariposas. No olvides llevar tu cámara para capturar estos encuentros inolvidables con la fauna.</p>
-                        <img src="./assets/image/DALL·E 2023-06-08 14.52.56 - dame un imagen 4k de el oso de anteojos colombia .png" alt="Vida silvestre"  width="300" height="200" >
+                        <img src="./assets/image/osoanteojos.webp" alt="Vida silvestre"  width="300" height="200" >
                       </div>
                       <div class="col-md-12">
                         <p class="textlimit">Prepárate para una aventura inolvidable mientras exploras los tesoros escondidos de los Andes Colombianos. Estas tierras te invitan a conectarte con la naturaleza en su estado más puro y a descubrir la magia que se encuentra en cada rincón de esta región montañosa. ¡Emprende tu viaje y sé testigo de la grandeza de los Andes Colombianos!</p>
