--- a/pages/about.html
+++ b/pages/about.html
@@ -22,6 +22,7 @@
 </head>
 <body>
 
+  
     <!--bootstrap + Flexbox -->
     <header class="container-fluid">
         <section class="row h-100">
@@ -59,7 +60,7 @@
         <section>
             <div class="container">
                 <div class="imageabsolut">
-                  <img src="../assets/image/Topographic 3.svg" alt="lo sentimos no carga la imagen">
+                  <img src="../assets/image/Topographic 3.svg" alt="Topographic">
                 </div>
                 <h1 class="blanco">Acerca de los Andes Colombianos</h1>
                 <p>Los Andes colombianos se extienden a lo largo del territorio de Colombia, desde el suroccidente hasta el norte del país. Esta imponente cadena montañosa abarca una diversidad de paisajes y altitudes que van desde valles fértiles hasta picos nevados.
