arregl imagenes accesibles y con mejores nombres

--- a/pages/about.html
+++ b/pages/about.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
 <!-- Etiquetas Open Graph -->
-<link rel="icon" href="../assets/image/favicon-32x32.png" type="image/png">
-<link rel="apple-touch-icon" sizes="180x180" href="../assets/image/apple-icon-180x180.png">
+<link rel="icon" href="../assets/image/32x32.webp" type="image/png">
+<link rel="apple-touch-icon" sizes="180x180" href="../assets/image/apple-icon.webp">
 <meta property="og:title" content="Acerca de los Andes Colombianos">
 <meta property="og:description" content="Descubre la majestuosidad de los Andes colombianos, una cadena montañosa diversa y sorprendente. Desde valles fértiles hasta picos nevados, este paraíso natural alberga biodiversidad única y culturas ancestrales. Sumérgete en la grandeza de la naturaleza y la autenticidad de las comunidades locales en los Andes colombianos.">
 
@@ -16,9 +16,6 @@
     <title>about us</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <style>
-        body{font-family: 'Poppins', sans-serif;}
-    </style>
 </head>
 <body>
 
@@ -28,7 +25,7 @@
         <section class="row h-100">
             <nav class="navbar navbar-expand-lg navbar-light p-3 text-primary-emphasis bg-danger border border-primary-subtle">
               <a class="navbar-brand" href="../index.html">
-                 <img src="../assets/image/Logo.png" alt="logo" style="width: 80px; height: auto;">
+                 <img src="../assets/image/Logo.webp" alt="logo" style="width: 80px; height: auto;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -60,7 +57,7 @@
         <section>
             <div class="container">
                 <div class="imageabsolut">
-                  <img src="../assets/image/Topographic 3.svg" alt="Topographic">
+                  <img src="../assets/image/Topographic.webp" alt="Topographic">
                 </div>
                 <h1 class="blanco">Acerca de los Andes Colombianos</h1>
                 <p>Los Andes colombianos se extienden a lo largo del territorio de Colombia, desde el suroccidente hasta el norte del país. Esta imponente cadena montañosa abarca una diversidad de paisajes y altitudes que van desde valles fértiles hasta picos nevados.
