--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/css/intlTelInput.css">
     
     <!-- Etiquetas Open Graph -->
-    <link rel="icon" href="../assets/image/favicon-32x32.png" type="image/png">
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/image/apple-icon-180x180.png">
+    <link rel="icon" href="../assets/image/32x32.webp" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/image/apple-icon.webp">
     <meta property="og:title" content="contactanos">
     <meta property="og:description" content="Contacta con nosotros para obtener más información sobre los impresionantes paisajes de los Andes Colombianos. Estamos aquí para responder a tus preguntas y brindarte una experiencia inolvidable en esta maravillosa región.">
     
@@ -18,9 +18,6 @@
     <title>contact</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <style>
-        body{font-family: 'Poppins', sans-serif;}
-    </style>
 </head>
 <body>
 
@@ -29,7 +26,7 @@
         <section class="row h-100">
             <nav class="navbar navbar-expand-lg navbar-light p-3 text-primary-emphasis bg-danger border border-primary-subtle">
                 <a class="navbar-brand" href="../index.html">
-                  <img src="../assets/image/Logo.png" alt="logo" style="width: 80px; height: auto;">
+                  <img src="../assets/image/Logo.webp" alt="logo" style="width: 80px; height: auto;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
