--- a/pages/services.html
+++ b/pages/services.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Etiquetas Open Graph -->
-    <link rel="icon" href="../assets/image/favicon-32x32.png" type="image/png">
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/image/apple-icon-180x180.png">
+    <link rel="icon" href="../assets/image/32x32.webp" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/image/apple-icon.webp">
     <meta property="og:title" content="servicios">
     <meta property="og:description" content="Ofrecemos una amplia gama de servicios diseñados para satisfacer tus necesidades">
 
@@ -17,9 +17,6 @@
     <title>services</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <style>
-        body{font-family: 'Poppins', sans-serif;}
-    </style>
 </head>
 <body>
 
@@ -28,7 +25,7 @@
         <section class="row h-100">
             <nav class="navbar navbar-expand-lg navbar-light p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle">
                 <a class="navbar-brand" href="../index.html">
-                 <img src="../assets/image/Logo.png" alt="logo" style="width: 80px; height: auto;">
+                 <img src="../assets/image/Logo.webp" alt="logo" style="width: 80px; height: auto;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
@@ -61,7 +58,7 @@
     <main>
         <section>
             <div class="imageabsolut">
-              <img src="../assets/image/Topographic 3.svg" alt="lo sentimos no carga la imagen">
+              <img src="../assets/image/Topographic2.webp" alt="lo sentimos no carga la imagen">
             </div>
             <div class="container">
                 <h2 class="blanco">Nuestros Servicios</h2>
@@ -70,22 +67,22 @@
                   <li>
                     <h3 class="blanco2">Servicio de Guía de Montaña</h3>
                     <p>Nuestros experimentados guías te acompañarán en emocionantes expediciones a través de los Andes colombianos. Te llevarán a lugares impresionantes, te proporcionarán información sobre la flora y fauna local y garantizarán tu seguridad durante la aventura.</p>
-                    <img src="../assets/image/guia de montaña.jpeg" width="300" height="400" alt="Servicio de Guía de Montaña">
+                    <img src="../assets/image/guiamontaña.webp" width="300" height="400" alt="Servicio de Guía de Montaña">
                   </li>
                   <li>
                     <h3 class="blanco2" >Senderismo y Trekking</h3>
                     <p>Explora los senderos escénicos de los Andes colombianos con nuestras rutas de senderismo y trekking. Desde caminatas suaves hasta desafiantes ascensos, tenemos opciones para todos los niveles de experiencia. Descubre la belleza natural y disfruta de vistas panorámicas inolvidables.</p>
-                    <img src="../assets/image/a3753da6a31b3aa4703308f6dc0d7284.jpg" width="300" height="400" alt="Senderismo y Trekking">
+                    <img src="../assets/image/amazon.webp" width="300" height="400" alt="Senderismo y Trekking">
                   </li>
                   <li>
                     <h3 class="blanco2" >Turismo Cultural</h3>
                     <p>Sumérgete en la rica cultura de los Andes colombianos a través de nuestros tours culturales. Visita pueblos tradicionales, conoce a las comunidades indígenas locales, participa en rituales y descubre la artesanía y la gastronomía auténtica de la región.</p>
-                    <img src="../assets/image/turismo cultural.jpeg" width="300" height="400" alt="Turismo Cultural">
+                    <img src="../assets/image/turismo cultural.webp" width="300" height="400" alt="Turismo Cultural">
                   </li>
                   <li>
                     <h3 class="blanco2" >Ecoturismo y Conservación</h3>
                     <p>Nos comprometemos con la conservación de los Andes colombianos. Únete a nuestros programas de ecoturismo y contribuye directamente a la protección de los ecosistemas locales. Participa en actividades de reforestación, avistamiento de aves y otras iniciativas sostenibles.</p>
-                    <img src="../assets/image/ecoturismo y conservacion.jpeg" width="300" height="400" alt="Ecoturismo y Conservación">
+                    <img src="../assets/image/ecoturismo.webp" width="300" height="400" alt="Ecoturismo y Conservación">
                   </li>
                 </ul>
             </div>
