--- a/pages/us.html
+++ b/pages/us.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Etiquetas Open Graph -->
-    <link rel="icon" href="../assets/image/favicon-32x32.png" type="image/png">
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/image/apple-icon-180x180.png">
+    <link rel="icon" href="../assets/image/32x32.webp" type="image/png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../assets/image/apple-icon.webp">
     <meta property="og:title" content="Nosotros">
     <meta property="og:description" content="Diversidad de especies y ecosistemas en los Andes Colombianos. Vegetación variada, fauna emblemática y especies endémicas. Comunidades locales clave para conservación y ecoturismo.">    
 
@@ -15,9 +15,6 @@
     <title>us</title>
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
-    <style>
-        body{font-family: 'Poppins', sans-serif;}
-    </style>
 </head>
 <body>
 
@@ -26,7 +23,7 @@
         <section class="row h-100">
             <nav class="navbar navbar-expand-lg navbar-light p-3 text-primary-emphasis bg-primary-subtle border border-primary-subtle">
                 <a class="navbar-brand" href="../index.html">
-                 <img src="../assets/image/Logo.png" alt="logo" style="width: 80px; height: auto;">
+                 <img src="../assets/image/Logo.webp" alt="logo" style="width: 80px; height: auto;">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
